[gd_scene load_steps=4 format=2]

[ext_resource path="res://PhysicalVTemporalCheck.tres" type="ButtonGroup" id=1]
[ext_resource path="res://PhysicalvTemporal.gd" type="Script" id=2]
[ext_resource path="res://black_background.jpg" type="Texture" id=3]

[node name="PhysicalvTemporal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Click the factor that represents the more important contributor to workload for the task."

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 34.0
margin_right = 330.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )

[node name="Physical" type="CheckBox" parent="NinePatchRect/VBoxContainer"]
margin_top = 68.0
margin_right = 330.0
margin_bottom = 92.0
group = ExtResource( 1 )
text = "Physical Demand"

[node name="RichTextLabel2" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_top = 96.0
margin_right = 330.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 60 )
text = "How much physical activity was required (e.g. pushing, pulling, turning, controlling, activating, etc.)? Was the task easy or demanding, slow or brisk, slack or strenuous, restful or laborious?"

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 160.0
margin_right = 330.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 15 )

[node name="Temporal" type="CheckBox" parent="NinePatchRect/VBoxContainer"]
margin_top = 179.0
margin_right = 330.0
margin_bottom = 203.0
group = ExtResource( 1 )
text = "Temporal Demand"

[node name="RichTextLabel3" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_top = 207.0
margin_right = 330.0
margin_bottom = 267.0
rect_min_size = Vector2( 0, 60 )
text = "How much time pressure did you feel due to the rate of pace at which the tasks or task elements occurred? Was the pace slow and leisurely or rapid and frantic?"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 271.0
margin_right = 330.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 125 )

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 400.0
margin_right = 330.0
margin_bottom = 420.0
text = "Next"
[connection signal="toggled" from="NinePatchRect/VBoxContainer/Physical" to="." method="_on_Physical_toggled"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/Temporal" to="." method="_on_Temporal_toggled"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/Button" to="." method="_on_Button_button_up"]
